--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
+     <!--    Icon goes here-->
+     <link rel="shortcut icon" href="./icons/briefing.png">
+     <link rel="bookmark" href="./icons/briefing.png">
     <!-- font awesome  -->
     <!-- https://cdnjs.com/libraries/font-awesome/5.15.1 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" 
