--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <!--    Icon goes here-->
      <link rel="shortcut icon" href="./icons/briefing.png">
      <link rel="bookmark" href="./icons/briefing.png">
-    <!-- font awesome  -->
+    <!-- font awesome--  -->
     <!-- https://cdnjs.com/libraries/font-awesome/5.15.1 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" 
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" 
