--- a/index.html
+++ b/index.html
@@ -23,19 +23,21 @@
         </h1>
     </header>
 
-    <form action="">
+    <form>
         <input type="text">
         <input type="number" min="1" max="12" placeholder="M" required>
         <input type="number" min="1" max="31" placeholder="D" required>
         <button type="submit">Add into List</button>     
     </form>
 
-    <br>
-    <br>
+    <br/>
+    <br/>
+
     <div class="sort">
         <button>Sort By Time</button>
-        <section></section>
     </div>
+    <section></section>
+    
     <script src="./app.js"></script>
 </body>
 </html>
